--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -15,11 +15,12 @@
         <li><h4>I want to be able to learn the best practices and ways at which to make a website</h4></li>
         <li><h4>I want to know how to make a website look professional and impressive all from scratch</h4></li>
     </ol>
-    <h3>About Me: <h4>I am a Junior/Senior studying computer science at CU Boulder. I am taking a focus in web/app design, and have
+    <h3> About Me: </h3>
+    <h4>I am a Junior/Senior studying computer science at CU Boulder. I am taking a focus in web/app design, and have
         a large interest in entreprenuership. At CU Boulder I run the CU Board Game Club and thus love board games. I also love to bike
         and golf. Here is a youtube video that I find funny: <a href="https://www.youtube.com/watch?v=96-3VUxfNKc&list=LL&index=8">
-        CLICK ME!</a></h4>
-    </h3>
+        CLICK ME!</a>
+    </h4>
     
 
 </body>
