Finished html midterm and fixes

--- a/html-midterm/page3.html
+++ b/html-midterm/page3.html
@@ -1,6 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<!-- This is missing a title, meta, and a link to a css stylesheet found in the css subfolder. Please add them.-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Page 3</title>
+    <link rel="stylesheet" href="./css/cars.css">
 </head>
 <body>
     <div class="navbar">
@@ -78,7 +84,7 @@
         </form>
     </section>
     
-    <footer>
+    <footer style="position: relative;">
         <p>&copy; 2023 Generic Car Page. All rights reserved.</p>
     </footer>
 </body>
