--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -28,6 +28,39 @@
         <li>There is a paragraph on this page that says: "This div contains a nested paragraph." that doesn't have a paragraph closing tag. I added the "/p" tag to the end of the sentence.</li>
         <li>There is a table within this page, and cell 3 doesn't have a closing tag for the table data. I added "/td" after it said "cell 3" to fix this.</li>
         <li>The table in this page doesn't have closing tags for the table, and the last table row. I added "/tr" then "/table" closing tags to fix this mistake</li>
+        <li>This page doesn't specificy what language html uses. I changed the html tag to say html lang="en".</li>
+    </ol>
+
+    <h3>Page 2</h3>
+    <ol>
+        <li>In the first paragraph there is no closing tag for the bold on "New Beehive Inn". I added the "/b" tag to the barckets at the end of "New Beehive Inn"</li>
+        <li>There is a "Interior" subsection on this page where the tags go bold and then second heading when they should go second heading then bold. It is now "h2-b-Interior-/b-/h2"</li>
+        <li>In the same "Interior" subsection there is a link that has the href "where do i go," when it should have a link. I changed the href to the wiki page for segmental arches, so it is now: "href='https://en.wikipedia.org/wiki/Segmental_arch'"</li>
+        <li>The subsection of "History" doesn't have a closing tag. I added the /h6 closing tag to this header.</li>
+        <li>Throughout the whole page the structure of each subsection header is not consistent with the source page. I changed this by making every subsection and header the same as the source wikipedia page.</li>
+        <li>There is a link for bay that has a href to a broken link. I changed the link to the wikipedia page for bay, so it is now "href='https://en.wiktionary.org/wiki/bay'"</li>
+    </ol>
+
+    <h3>Page 3</h3>
+    <ol>
+        <li>There is no html doctype at the top of this page. I added "!DOCTYPE html" tag to the top of this page.</li>
+        <li>This page has no title within the head of the html document. I added a title tag saying "page 3" to the head.</li>
+        <li>This page needs css styling, so there needs to be a link to the css stylesheet. I added this to the head to bring css to the page: "link rel="stylesheet" href='./css/cars.css'"</li>
+        <li>This page needs to add meta tags to the head of the html document. I added these meta tags to the page:"meta charset='UTF-8',
+        meta http-equiv='X-UA-Compatible' content='IE=edge',
+        meta name='viewport' content='width=device-width, initial-scale=1.0'"</li>
+        <li>The html tag at the top of the page doesn't specify the language. I change the html tag to say: "html lang='en'".</li>
+        <li>The footer doesn't sit properly at the bottom of the page, and extends all the way to the left side of the page. To fix this I added some inline style to the footer saying "style= 'position: relative;'"</li>
+    </ol>
+
+    <h3>Page 4</h3>
+    <ol>
+        <li>The table data for dogs singing within the table doesn't have a closing tag. I added the "/td" closing tag to this in order to fix it.</li>
+        <li>There is a table data for an orage cat picture that doesn't have a table data tag. I added the "td" tags around this image.</li>
+        <li>There is a image labled "creature" within the table that doesn't have a table data opening tag. I added the "td" opening tag to this image.</li>
+        <li>There is no doctype for html at the top of this page. I added the "!DOCTYPE html" to the top of this page.</li>
+        <li>There is no alt attribute for any of the images in this table. I added alt descriptions to every photo that is apart of the table.</li>
+        <li>The images are not placed right within the table. I restructured where the images are in the table so that they are under the right columns because cats should be the first data in each row and second for dogs, third for other.</li>
     </ol>
 </body>
 </html>
