--- a/html-midterm/page4.html
+++ b/html-midterm/page4.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,19 +34,19 @@
             <th>Other?</th>
         </tr>
         <tr>
-            <td><img src="img/dogsFrolic.png"></td>
-            <td><img src="img/dogSinging.png">
-            <td><img src="img/labLab.png"></td>
+            <td><img src="img/boxingCats.png" alt="Image of cats boxing"></td>
+            <td><img src="img/dogsFrolic.png" alt="Image of dogs frolicing"></td>
+            <td><img src="img/creature.png" alt="Image of a strange creature"></td>
         </tr>
         <tr>
-            <td><img src="img/boxingCats.png"></td>
-            <img src="img/orangeCat.png">
-            <td><img src="img/sunCat.png"></td>
+            <td><img src="img/orangeCat.png" alt="Image of an orange cat"></td>
+            <td><img src="img/dogSinging.png" alt="Image of dogs singing"></td>
+            <td><img src="img/aliensPeace.png" alt="Image of aliens looking for peace"></td>
         </tr>
         <tr>
-            <td><img src="img/diamondAlien.png"></td>
-            <img src="img/creature.png"></td>
-            <td><img src="img/aliensPeace.png"></td>
+            <td><img src="img/sunCat.png" alt="Image of a cat in the sun"></td>
+            <td><img src="img/labLab.png" alt="Image of dog in a lab"></td>
+            <td><img src="img/diamondAlien.png" alt="Image of aliens with diamonds"></td>
         </tr>
 
     </table>
