--- a/wa/wa8/wa8.html
+++ b/wa/wa8/wa8.html
@@ -19,6 +19,6 @@
         <a>More</a>
         <a>Socials</a>
     </nav>
-    <img src="./img/sunrise.jpg">
+    <img src="img/sunrise.jpg">
 </body>
 </html>
