--- a/wa/wa10/wa10.html
+++ b/wa/wa10/wa10.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width" >
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Mountains+of+Christmas&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="wa10.css">
@@ -13,13 +13,13 @@
   <body>
     <div class = "nameContainer">
       <label for="customname">Enter snowman name:</label>
-      <input id="customname" type="text" placeholder="" />
+      <input id="customname" type="text" placeholder="textBox" >
     </div>
     <div class ="nameContainer">
       <label for="christmas">Christmas</label
-      ><input id="christmas" type="radio" name="winter-christmas" value="christmas" checked />
+      ><input id="christmas" type="radio" name="winter-christmas" value="christmas" checked >
       <label for="winter">Winter</label
-      ><input id="winter" type="radio" name="winter-christmas" value="winter" />
+      ><input id="winter" type="radio" name="winter-christmas" value="winter" >
     </div>
     <div class="submit">
       <button class="randomize">Generate random story</button>
