--- a/wa/wa12/wa12.html
+++ b/wa/wa12/wa12.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ica12.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="wa12.css">
     <title>Document</title>
 </head>
 <body>
     <div class="app">
-        <header>Random Christmas Trivia</header>
+        <header>Quote and Picture Generator</header>
         <section class="quotes">
           <div class="quote-text" id="js-quote-text"></div>
-          <div class="quote-text" id="js-answer-text"></div>
         </section>
         <section class="controls" >
           <button type="button" id="js-new-quote" class="new-quote button">
-            Generate a new bit of trivia!
-          </button>
-          <button type="button" id="js-tweet" class="twitter button">
-            Show me the answer!
+            Generate a Quote!
           </button>
           <!-- <a class="answer button" id="js-tweet" target="_blank" rel="noreferrer">Show me the answer!</a> -->
         </section>
+
+        <img id="js-quote-image" src="" alt="Quote related image">
+
       </div>
-      <script src="ica12.js"></script>
+      <script src="wa12.js"></script>
 </body>
 </html>
